release/checkoutservice-authz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: checkoutservice-authz
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: checkoutservice
  rules:
    # Allow frontend to access PlaceOrder method
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/frontend"
      to:
        - operation:
            ports: ["5050"]
            methods: ["POST"]
            paths: ["/hipstershop.CheckoutService/PlaceOrder"]
  
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: checkoutservice-peer-auth
  namespace: default
spec:
  mtls:
    mode: STRICT

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: checkoutservice-destination-rule
  namespace: default
spec:
  host: checkoutservice.default.svc.cluster.local
  trafficPolicy:
    tls:
     mode: ISTIO_MUTUAL
