release/emailservice-authz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: emailservice-authz
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: emailservice
  rules:
    # Allow checkoutservice to access SendOrderConfirmation method
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/checkoutservice"
      to:
        - operation:
            ports: ["8080"]
            methods: ["POST"]
            paths: [
              "/hipstershop.EmailService/SendOrderConfirmation"
            ]

apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: emailservice-peer-auth
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: emailservice-destination-rule
  namespace: default
spec:
  host: emailservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
