release/paymentservice-authz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: paymentservice-authz
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: paymentservice
  rules:
    # Allow checkoutservice to access Charge method
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/checkoutservice"
      to:
        - operation:
            ports: ["50051"]
            methods: ["POST"]
            paths: [
              "/hipstershop.PaymentService/Charge"
            ]

apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: paymentservice-peer-auth
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: paymentservice-destination-rule
  namespace: default
spec:
  host: paymentservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
